<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>net.unit8.enkan.faas</groupId>
    <artifactId>enkan-faas-parent</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>enkan-faas-parent</name>
    <description>Function-as-a-Service adapters for the Enkan web framework</description>
    <url>https://github.com/enkan/enkan-faas</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!--
            Java 25 is required because we depend on Enkan 0.14.2-SNAPSHOT which targets Java 25.
            The runtime target on AWS Lambda is therefore the java25 managed runtime, or a
            GraalVM 25 native binary on provided.al2023.
        -->
        <java.version>25</java.version>

        <enkan.version>0.14.2-SNAPSHOT</enkan.version>

        <!-- Mirror Enkan core's surefire JVM flags so MixinUtils etc. work in tests. -->
        <surefire.argLine.common>
            --add-opens java.base/java.lang=ALL-UNNAMED
            --add-opens java.base/java.lang.invoke=ALL-UNNAMED
            -XX:+EnableDynamicAgentLoading
        </surefire.argLine.common>

        <aws.lambda.events.version>3.16.1</aws.lambda.events.version>
        <aws.lambda.core.version>1.2.3</aws.lambda.core.version>
        <aws.lambda.ric.version>2.9.0</aws.lambda.ric.version>
        <graalvm.sdk.version>25.0.2</graalvm.sdk.version>
        <gcp.functions.version>2.0.0</gcp.functions.version>
        <azure.functions.version>3.1.0</azure.functions.version>
        <azure.functions.core.version>1.3.0</azure.functions.core.version>

        <junit.version>5.14.3</junit.version>
        <assertj.version>3.27.7</assertj.version>
        <jackson.version>2.18.2</jackson.version>

        <maven.compiler.version>3.13.0</maven.compiler.version>
        <maven.surefire.version>3.5.5</maven.surefire.version>
        <maven.shade.version>3.6.0</maven.shade.version>
        <native.maven.plugin.version>0.10.6</native.maven.plugin.version>
    </properties>

    <modules>
        <module>enkan-component-faas</module>
        <module>enkan-component-faas-aws</module>
        <module>enkan-component-faas-gcp</module>
        <module>enkan-component-faas-azure</module>
        <module>examples/todo-multifunction</module>
    </modules>

    <repositories>
        <repository>
            <id>sonatype-snapshots</id>
            <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
            <releases><enabled>false</enabled></releases>
            <snapshots><enabled>true</enabled></snapshots>
        </repository>
        <repository>
            <id>central-snapshots</id>
            <url>https://central.sonatype.com/repository/maven-snapshots/</url>
            <releases><enabled>false</enabled></releases>
            <snapshots><enabled>true</enabled></snapshots>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>net.unit8.enkan</groupId>
                <artifactId>enkan-system</artifactId>
                <version>${enkan.version}</version>
            </dependency>
            <dependency>
                <groupId>net.unit8.enkan</groupId>
                <artifactId>enkan-web</artifactId>
                <version>${enkan.version}</version>
            </dependency>
            <dependency>
                <groupId>net.unit8.enkan</groupId>
                <artifactId>enkan-core</artifactId>
                <version>${enkan.version}</version>
            </dependency>
            <dependency>
                <groupId>net.unit8.enkan</groupId>
                <artifactId>kotowari</artifactId>
                <version>${enkan.version}</version>
            </dependency>

            <dependency>
                <groupId>net.unit8.enkan.faas</groupId>
                <artifactId>enkan-component-faas</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>net.unit8.enkan.faas</groupId>
                <artifactId>enkan-component-faas-aws</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>net.unit8.enkan.faas</groupId>
                <artifactId>enkan-component-faas-gcp</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>net.unit8.enkan.faas</groupId>
                <artifactId>enkan-component-faas-azure</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.google.cloud.functions</groupId>
                <artifactId>functions-framework-api</artifactId>
                <version>${gcp.functions.version}</version>
            </dependency>
            <dependency>
                <groupId>com.microsoft.azure.functions</groupId>
                <artifactId>azure-functions-java-library</artifactId>
                <version>${azure.functions.version}</version>
            </dependency>
            <dependency>
                <groupId>com.microsoft.azure.functions</groupId>
                <artifactId>azure-functions-java-core-library</artifactId>
                <version>${azure.functions.core.version}</version>
            </dependency>

            <dependency>
                <groupId>com.amazonaws</groupId>
                <artifactId>aws-lambda-java-events</artifactId>
                <version>${aws.lambda.events.version}</version>
            </dependency>
            <dependency>
                <groupId>com.amazonaws</groupId>
                <artifactId>aws-lambda-java-core</artifactId>
                <version>${aws.lambda.core.version}</version>
            </dependency>
            <dependency>
                <groupId>com.amazonaws</groupId>
                <artifactId>aws-lambda-java-runtime-interface-client</artifactId>
                <version>${aws.lambda.ric.version}</version>
            </dependency>
            <dependency>
                <groupId>org.graalvm.sdk</groupId>
                <artifactId>graal-sdk</artifactId>
                <version>${graalvm.sdk.version}</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>${assertj.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven.compiler.version}</version>
                    <configuration>
                        <release>${java.version}</release>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven.surefire.version}</version>
                    <configuration>
                        <argLine>${surefire.argLine.common}</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>${maven.shade.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <licenses>
        <license>
            <name>Eclipse Public License (EPL), Version 2.0</name>
            <url>https://www.eclipse.org/legal/epl-2.0/</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <url>https://github.com/enkan/enkan-faas</url>
        <connection>scm:git:git://github.com/enkan/enkan-faas.git</connection>
        <developerConnection>scm:git:git@github.com:enkan/enkan-faas.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/enkan/enkan-faas/issues</url>
    </issueManagement>

    <developers>
        <developer>
            <id>kawasima</id>
            <name>Yoshitaka Kawashima</name>
        </developer>
    </developers>

    <inceptionYear>2026</inceptionYear>
</project>
